--- a/home.html
+++ b/home.html
@@ -72,8 +72,8 @@
         <div class="jcarousel display">
         <ul>
         <li>
-                <img id="" src="images/portfolio/ROBOTS-1.jpg" alt="Robots Preview"/>
-                <div id="" class="modal"><span class="close">&times;</span><img class="modalimage" id="" alt="Robots"><div id=""></div>
+                <img id="imgPrev" src="images/portfolio/ROBOTS-1.jpg" alt="Robots Preview"/>
+                <div id="imgModal" class="modal"><span class="close">&times;</span><img class="modalimage" id="img01" alt="Robots"><div id="caption"></div>
                 </div>
         </li>
         <li>
