--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@
         <ul>
         <li>
                 <img id="imgPrev" src="images/portfolio/ROBOTS-1.jpg" alt="Robots Preview"/>
-                <div id="imgModal" class="modal"><span class="close">&times;</span><img class="modalimage" id="img01" alt="Robots"><div id="caption"></div>
+                <div id="imgModal" class="modal"><span class="close">&times;</span><img class="modalimage" id="img01" alt="Robots"><div id="caption">yarp</div>
                 </div>
         </li>
         <li>
