--- a/homemain.html
+++ b/homemain.html
@@ -615,9 +615,10 @@
     </div></div>
                 </div>
             <div class="parawrap" style="height:600px;">
-        <div class="background"><section><div class="grid2"></div></section></div>
-        <div class="midground" style="transform: translateZ(-9px) scale(4);margin-top:0;"><img class="car" src="/images/car_pixel.png" alt="car"/></div>
-        <div class="foreground"></div>
+        <div class="background"><section class="section2"><div class="grid2"></div></section></div>
+				<div class="midmidground"><div class="mountains"></div></div>
+        <div class="midground" style="transform: translateZ(-6px) scale(4);margin-top:0;"><img class="car" src="/images/car_pixel.png" alt="car"/></div>
+        <div class="foreground"><div class="trees"></div></div>
                 </div>
     
     <!-- Illustrations -->
@@ -710,7 +711,7 @@
         </li>
     </ul>
         </div></div>
-		<form id="contactForm" method="POST" action="contact-form.php" style="margin:80px;">
+		<form id="contactForm" method="POST" action="/contact-form.php" style="margin: 80px auto;width: 65vw;">
 			<div class="form-row">
 				<div class="form-group col-sm-6">
 					<input aria-label="name" type="text" class="form-control" name="name" placeholder="Your Name" required>
@@ -719,7 +720,7 @@
 					<input aria-label="email" type="email" class="form-control" name="email" placeholder="Your Email" required>
 				</div>
 			</div>
-			<textarea aria-label="message" name="message" class="form-control" placeholder="Your Message" required></textarea>
+			<textarea aria-label="message" name="message" class="form-control" placeholder="Your Message" required style="height:10vw;"></textarea>
 			<button type="submit" class="btn btn-primary">Submit</button>
 		</form>
 	</div>
