--- a/homemain.html
+++ b/homemain.html
@@ -1318,14 +1318,14 @@
           $("#parallax").toggleClass("parallax");
         });
 
-        document
-          .getElementById("contactForm")
-          .addEventListener("submit", function (event) {
-            // Your validation code here
-            if (!isValid) {
-              event.preventDefault();
-            }
-          });
+        // document
+        // .getElementById("contactForm")
+        // .addEventListener("submit", function (event) {
+        // Your validation code here
+        // if (!isValid) {
+        // event.preventDefault();
+        // }
+        // });
       </script>
     </div>
   </body>
